--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-link": "^1.6.44",
     "gatsby-plugin-catch-links": "^1.0.22",
     "gatsby-plugin-google-analytics": "^1.0.31",
+    "gatsby-plugin-styled-components": "^1.0.5",
     "gatsby-plugin-lodash": "^1.0.11",
     "gatsby-plugin-manifest": "^1.0.24",
     "gatsby-plugin-nprogress": "^1.0.14",
@@ -25,12 +26,12 @@
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-sharp": "^1.6.46",
     "gatsby-plugin-sitemap": "^1.2.25",
-    "gatsby-plugin-typography": "^1.7.18",
     "gatsby-react-router-scroll": "^1.0.18",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^1.5.65",
     "gatsby-remark-responsive-iframe": "^1.4.19",
-    "gatsby-source-filesystem": "^1.5.38",
+    "gatsby-source-filesystem": "^1.5.11",
+    "gatsby-source-wordpress": "^2.0.42",
     "gatsby-transformer-remark": "^1.7.41",
     "gatsby-transformer-sharp": "^1.6.26",
     "react-burger-menu": "^2.5.0",
