--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-portfolio-emma",
-  "description": "Gatsby Starter Portfolio Emma",
+  "name": "nelson-portfolio-page",
+  "description": "nelson portfolio page",
   "version": "1.1.0",
-  "author": "LekoArts <hello@lekoarts.de> (https://www.lekoarts.de)",
+  "author": "Artur Nagenrauft",
   "repository": {
     "url": "https://github.com/LeKoArts/gatsby-starter-portfolio-emma",
     "type": "git"
@@ -14,7 +14,6 @@
     "gatsby-link": "^1.6.44",
     "gatsby-plugin-catch-links": "^1.0.22",
     "gatsby-plugin-google-analytics": "^1.0.31",
-    "gatsby-plugin-styled-components": "^1.0.5",
     "gatsby-plugin-lodash": "^1.0.11",
     "gatsby-plugin-manifest": "^1.0.24",
     "gatsby-plugin-nprogress": "^1.0.14",
@@ -26,6 +25,7 @@
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-sharp": "^1.6.46",
     "gatsby-plugin-sitemap": "^1.2.25",
+    "gatsby-plugin-styled-components": "^1.0.5",
     "gatsby-react-router-scroll": "^1.0.18",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^1.5.65",
@@ -42,18 +42,14 @@
     "react-reveal": "^0.7.3"
   },
   "keywords": [
-    "gatsby",
-    "lekoarts",
     "portfolio",
-    "starter",
-    "gatsby-starter"
+    "styling"
   ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "dev": "gatsby develop -o",
-    "postinstall": "node ./bin/hello.js"
+    "dev": "gatsby develop -o"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
